--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.arandroid.risultatilive"
-        minSdkVersion 9
+        minSdkVersion 13
         targetSdkVersion 24
         versionCode 3
         versionName "1.2"
@@ -21,7 +21,8 @@ android {
 }
 
 dependencies {
-    compile files('libs/tagsoup-1.2.1.jar')
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.2.0'
+    compile 'org.jsoup:jsoup:1.9.2'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.google.android.gms:play-services-ads:9.6.1'
 }
