--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.arandroid.risultatilive"
-    >
+    package="com.arandroid.risultatilive">
 
-    <uses-permission
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <uses-permission xmlns:android="http://schemas.android.com/apk/res/android"
         android:name="android.permission.INTERNET" />
-    
-    <uses-permission
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <uses-permission xmlns:android="http://schemas.android.com/apk/res/android"
         android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".core.GlobalState"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name=".core.GlobalState" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".PrimaActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" >
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,35 +23,39 @@
         </activity>
         <activity
             android:name=".TabLayoutActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" >
-        </activity>
-        <activity
-            android:name=".RisultatiActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" >
-        </activity>
-        <activity
-            android:name=".ClassificaActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" >
-        </activity>
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
         <activity
             android:name=".VisualizzaInfo"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" >
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:parentActivityName=".LegaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.arandroid.risultatilive.LegaActivity" />
         </activity>
-         <activity
-            android:name=".AboutActivity"
-           android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" >
-        </activity>
-         <activity
+        <activity
             android:name=".AboutActivityComplete"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize">
+            android:parentActivityName=".PrimaActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.arandroid.risultatilive.PrimaActivity" />
         </activity>
-        
-         <meta-data
+
+        <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-          
-          <activity android:name="com.google.android.gms.ads.AdActivity"
-             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+        <activity
+            android:name=".LegaActivity"
+            android:parentActivityName=".PrimaActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.arandroid.risultatilive.PrimaActivity" />
+        </activity>
     </application>
 
 </manifest>
