--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.1"
 
     defaultConfig {
         applicationId "com.arandroid.risultatilive"
-        minSdkVersion 13
-        targetSdkVersion 24
-        versionCode 3
-        versionName "1.2"
+        minSdkVersion 16
+        targetSdkVersion 28
+        versionCode 4
+        versionName "2.0"
     }
 
     buildTypes {
@@ -21,8 +21,10 @@ android {
 }
 
 dependencies {
-    compile 'org.jsoup:jsoup:1.9.2'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.google.android.gms:play-services-ads:9.6.1'
+    implementation 'org.jsoup:jsoup:1.11.3'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation 'com.android.support:customtabs:28.0.0-rc01'
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
 }
