--- a/local.properties
+++ b/local.properties
@@ -2,6 +2,7 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Thu Oct 06 16:40:07 CEST 2016
-sdk.dir=C\:\\Android\\android-sdk
+# For customization when using a Version Control System, please read the
+# header note.
+#Wed Aug 29 11:55:03 CEST 2018
+sdk.dir=C\:\\Users\\meringoloro\\AppData\\Local\\Android\\Sdk
